EZ-2371 - dashboard enhancement - fixing edit offer opened overlap issue,  fixing profile head width issue

--- a/App/PluginWeb/EzBob.Web/Content/css/Underwriter.css
+++ b/App/PluginWeb/EzBob.Web/Content/css/Underwriter.css
@@ -1596,7 +1596,10 @@ body {
     padding-top: 10px;
     position: fixed;
     z-index: 15;
-    width: calc(100% - 475px);
+    width: -moz-calc(100% - 475px);/* Firefox */
+    width: -webkit-calc(100% - 475px);/* WebKit */
+    width: -o-calc(100% - 475px);/* Opera */
+    width: calc(100% - 475px);/* Standard */
     background-color: #ebebeb;
 }
 
